--- a/sample-app-java/src/main/resources/application.properties
+++ b/sample-app-java/src/main/resources/application.properties
@@ -10,9 +10,9 @@ management.endpoints.web.exposure.include=*
 
 # SQL Server 
 spring.jpa.database=sqlserver
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=OpenHack
-spring.datasource.username=demouser
-spring.datasource.password=demo@pass123
+spring.datasource.url=jdbc:sqlserver://thecontinental.database.windows.net:1433;database=concierge;user=winston@thecontinental;password=Parabellum~;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=winston
+spring.datasource.password=Parabellum~
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
