--- a/sample-app-java/pom.xml
+++ b/sample-app-java/pom.xml
@@ -166,7 +166,7 @@
                     <schemaVersion>v2</schemaVersion>
                     <resourceGroup>HighTableJavaApp</resourceGroup>
                     <appName>hightablejavaapp</appName>
-                    <region>East US 2</region>
+                    <region>eastus2</region>
                     <runtime>
                         <os>linux</os>
                         <javaVersion>jre8</javaVersion>
