Update pipdotnet.yml for Azure Pipelines

--- a/pipdotnet.yml
+++ b/pipdotnet.yml
@@ -1,1 +1,10 @@
 #boom
+- task: VSBuild@1
+  inputs:
+    solution: '**\*.sln'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'dotnet'
+    publishLocation: 'Container'
