--- a/sample-app-node/package.json
+++ b/sample-app-node/package.json
@@ -12,7 +12,9 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "sequelize": "^5.8.6",
+    "tedious": "^6.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
